Add django cloudinary storage dependency

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pillow = "*"
 cloudinary = "*"
 whitenoise = "*"
 gunicorn = "*"
+django-cloudinary-storage = "*"
 
 [requires]
 python_version = "3.8"
