--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ cloudinary = "*"
 whitenoise = "*"
 gunicorn = "*"
 django-cloudinary-storage = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
